src/objects/IPM_Milestone__c.object
<CustomObject>
    <description>This object is used to capture Milestone Dates</description>
    <fields>
        <fullName>BET_Status_Check_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is updated by time-based workflow to validate BET Status on First Release &amp; Final Release Dates.</description>
        <label>BET Status Check Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Record_Id__c</fullName>
        <description>Id of cloned milestone.</description>
        <label>Clone Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalField__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External field to maintain uniqueness of standard milestones.</description>
        <externalId>true</externalId>
        <label>ExternalField</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag to identify the milestone is applicable for current project.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Actual_Target_Launch_Month__c</fullName>
        <description>Target launch month value</description>
        <formula>CASE(MONTH( IPM_Completed_On__c ), 

1, &quot;January&quot;, 

2, &quot;February&quot;, 

3, &quot;March&quot;, 

4, &quot;April&quot;, 

5, &quot;May&quot;, 

6, &quot;June&quot;, 

7, &quot;July&quot;, 

8, &quot;August&quot;, 

9, &quot;September&quot;, 

10, &quot;October&quot;, 

11, &quot;November&quot;, 

12, &quot;December&quot;, 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Target Launch Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Actual_Target_Launch_Year__c</fullName>
        <description>Target launch year value</description>
        <formula>text(YEAR( IPM_Completed_On__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Target Launch Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_BET__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show the BET milestone.</description>
        <label>BET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscord_Approval_Date__c</fullName>
        <description>Date when Bosscord was approved.</description>
        <label>Bosscord Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Category__c</fullName>
        <description>IPM Category of the project.</description>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Home Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshments</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Charter_Gate_Approval_Charter_Gate__c</fullName>
        <label>Charter Gate Approval @ Charter Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Completed_On__c</fullName>
        <description>Date when milestone is marked as completed.</description>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify milestone is completed.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Contract_Gate_Approval_Charter_Gate__c</fullName>
        <label>Contract Gate Approval @ Charter Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Contract_Gate_Approval_Contract_Gate__c</fullName>
        <label>Contract Gate Approval @ Contract Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Deputy_Project_Leader_Email__c</fullName>
        <description>Field to store deputy project leader&apos;s email.</description>
        <label>IPM Deputy Project Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IPM_Deputy_Project_Leader_Name__c</fullName>
        <description>Formula field to store deputy project leader&apos;s email.</description>
        <formula>IPM_Project__r.Deputy_Project_Leader__r.FirstName +&quot; &quot;+ IPM_Project__r.Deputy_Project_Leader__r.LastName</formula>
        <label>IPM Deputy Project Leader Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Capability__c</fullName>
        <description>Snapshot of Capability Due Date</description>
        <inlineHelpText>Snapshot of Capability Due Date</inlineHelpText>
        <label>Due Date@Capability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Feasibility__c</fullName>
        <description>Snapshot of Feasibility Due Date</description>
        <inlineHelpText>Snapshot of Feasibility Due Date</inlineHelpText>
        <label>Due Date@Feasibility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Idea__c</fullName>
        <description>Snapshot of Idea Due Date</description>
        <inlineHelpText>Snapshot of Idea Due Date</inlineHelpText>
        <label>Due Date@Idea</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Market_Deployment__c</fullName>
        <description>Snapshot of Market Deployment Due Date</description>
        <inlineHelpText>Snapshot of Market Deployment Due Date</inlineHelpText>
        <label>Due Date@Market Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Market_Ready__c</fullName>
        <description>Snapshot of Market Ready Due Date</description>
        <inlineHelpText>Snapshot of Market Ready Due Date</inlineHelpText>
        <label>Due Date@Market Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_Post_Launch_Evaluation__c</fullName>
        <description>Sanpshot of Post Launch Evaluation Due Date</description>
        <inlineHelpText>Sanpshot of Post Launch Evaluation Due Date</inlineHelpText>
        <label>Due Date@Post Launch Evaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date__c</fullName>
        <description>Due date of milestone</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date_isNull__c</fullName>
        <description>This field will advice if IPM_Due_Date__c is null or not</description>
        <formula>IF( ISBLANK(IPM_Due_Date__c) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if Due Date is null or not</inlineHelpText>
        <label>IPM_Due_Date_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Gatekeeper_Email__c</fullName>
        <description>Formula field to store Gatekeeper&apos;s email.</description>
        <label>IPM Gatekeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IPM_Gatekeeper_Name__c</fullName>
        <description>Formula field to store Gatekeeperr&apos;s name.</description>
        <formula>IPM_Project__r.IPM_Project_Gatekeeper__r.FirstName +&quot; &quot; + IPM_Project__r.IPM_Project_Gatekeeper__r.LastName</formula>
        <label>IPM Gatekeeper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Key_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the key milestone which is driving the flow.</description>
        <label>IPM Key Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Depl_Gate_Approval_Contract__c</fullName>
        <label>Market Depl Gate Approval @Contract Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Depl_Gate_Approval_MD__c</fullName>
        <label>Market Depl Gate Approval @ MD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Depl_Gate_Approval_MR__c</fullName>
        <label>Market Depl Gate Approval @Market Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Deployment_Approval_Charter__c</fullName>
        <label>Market Deployment Approval  @ Charter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Gate_Approval_Charter_Gate__c</fullName>
        <label>Market Gate Approval @ Charter Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Gate_Approval_Contract_Gate__c</fullName>
        <label>Market Gate Approval @ Contract Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Ready_Approval_Market_Gate__c</fullName>
        <label>Market Ready Approval @ Market Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Type__c</fullName>
        <description>Market type that will be set based on the type of Rollout selected.</description>
        <label>Market Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing &amp; Emerging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Milestone_Due_Date_In_Past__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send a mail when the milestone due date in the past</description>
        <label>IPM Milestone Due Date In Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent master milestone lookup.</description>
        <label>IPM Milestone</label>
        <referenceTo>IPM_Milestone__c</referenceTo>
        <relationshipLabel>IPM Milestones</relationshipLabel>
        <relationshipName>IPM_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Name__c</fullName>
        <description>Milestone name</description>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_No_Of_Days_for_Developing_Emerging__c</fullName>
        <description>Used for auto calculation of due date for developing market type.</description>
        <label>No Of Days for Developing &amp; Emerging</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_No_Of_Days_for_Developing__c</fullName>
        <description>Used for auto calculation of due date for market type milestone.</description>
        <label>No Of Days for Developing</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_No_of_Days__c</fullName>
        <description>No of days used for auto calculation the due date.</description>
        <label>No of Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Phase_Order__c</fullName>
        <description>To sort according to phase</description>
        <formula>IF(text(IPM_Phase__c)=&apos;Ideas&apos;,
1, 
IF(text(IPM_Phase__c)=&apos;Feasibility&apos;, 
2, 
IF(text(IPM_Phase__c)=&apos;Capability&apos;, 
3, 
IF(text(IPM_Phase__c)=&apos;Market Ready&apos;, 
4, 
IF(text(IPM_Phase__c)=&apos;Market Deployment&apos;,
5,
IF(text(IPM_Phase__c)=&apos;Post Launch Evaluation&apos;, 
6, 
-1) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Phase Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Phase__c</fullName>
        <description>phase of milestone.</description>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Launch Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Planned_Date__c</fullName>
        <description>Planned date of milestone, which will be same as due date.</description>
        <label>Suggested Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Planned_Date_isNull__c</fullName>
        <description>This field will advice if IPM_Planned_Date__c is null or not</description>
        <formula>IF( ISBLANK( IPM_Planned_Date__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if Suggested Planned date is null or not</inlineHelpText>
        <label>IPM_Planned_Date_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Launch_Date__c</fullName>
        <description>This field will store the target launch date of the project.</description>
        <label>Project Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Leader_Email__c</fullName>
        <description>Field to store Project leader&apos;s email.</description>
        <label>IPM Project Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Leader_Name__c</fullName>
        <description>Field to store Project leader&apos;s name.</description>
        <formula>IPM_Project__r.IPM_Project_Leader__r.FirstName + &quot; &quot; +  IPM_Project__r.IPM_Project_Leader__r.LastName</formula>
        <label>IPM Project Leader Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Name__c</fullName>
        <description>Formula field to store project name.</description>
        <formula>IPM_Project__r.IPM_Project_Name__c</formula>
        <label>IPM Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Started_Date__c</fullName>
        <description>This field will store the start date of the project.</description>
        <label>Project Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Type__c</fullName>
        <description>Project type will be stored at each milestone level.</description>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project__c</fullName>
        <description>IPM Project Master data</description>
        <label>IPM Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Milestones</relationshipLabel>
        <relationshipName>IPM_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPM_Proposed_Date__c</fullName>
        <description>Proposed date of milestone.</description>
        <label>Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date_Charter__c</fullName>
        <label>Target Launch Date @ Charter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date_Contract__c</fullName>
        <label>Target Launch Date @ Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date_MD_Gate__c</fullName>
        <label>Target Launch Date @ MD Gate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date_Market_Ready__c</fullName>
        <label>Target Launch Date @ Market Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Month__c</fullName>
        <description>Formula field to store the launch date month.</description>
        <formula>CASE(MONTH( IPM_Due_Date__c ), 

1, &quot;January&quot;, 

2, &quot;February&quot;, 

3, &quot;March&quot;, 

4, &quot;April&quot;, 

5, &quot;May&quot;, 

6, &quot;June&quot;, 

7, &quot;July&quot;, 

8, &quot;August&quot;, 

9, &quot;September&quot;, 

10, &quot;October&quot;, 

11, &quot;November&quot;, 

12, &quot;December&quot;, 

&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Launch Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Year__c</fullName>
        <description>Formula field to store the launch date year.</description>
        <formula>text(YEAR( IPM_Due_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Launch Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Type_of_Milestone__c</fullName>
        <description>Type of the milestone will be identified based on this field.</description>
        <label>Type of Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Type_of_gate__c</fullName>
        <description>Type of the gate will be identified based on this field.</description>
        <label>Type of Gate</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Violate_Preferred_Date__c</fullName>
        <description>Violated date calculation based on due date of Market ready milestone.</description>
        <formula>IF( AND((((IPM_Project__r.IPM_Target_Launch_Dates__c - IPM_Due_Date__c) + 
VALUE(IF(TEXT(IPM_Project__r.IPM_Market_Type__c) = &apos;Developed&apos;, IPM_No_Of_Days_for_Developing__c, 
IF(TEXT(IPM_Project__r.IPM_Market_Type__c) = &apos;Developing &amp; Emerging&apos;, IPM_No_Of_Days_for_Developing_Emerging__c , &apos;&apos;)))) &lt; 0 ), ISPICKVAL(IPM_Type_of_gate__c, &apos;Market Ready&apos;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Date Violated?</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>IPM_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mini_Milestones</fullName>
        <columns>NAME</columns>
        <columns>IPM_Name__c</columns>
        <columns>IPM_Milestone__c</columns>
        <columns>IPM_Type_of_Milestone__c</columns>
        <columns>IPM_Project_Type__c</columns>
        <columns>IPM_Project__c</columns>
        <columns>IPM_Phase_Order__c</columns>
        <columns>IPM_Active__c</columns>
        <columns>IPM_Market_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IPM_Type_of_gate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IPM_Milestone__c.IPM_Milestones</value>
        </filters>
        <filters>
            <field>IPM_Type_of_Milestone__c</field>
            <operation>equals</operation>
            <value>Mini</value>
        </filters>
        <label>Mini Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Milestones</fullName>
        <columns>NAME</columns>
        <columns>IPM_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Milestones</label>
    </listViews>
    <listViews>
        <fullName>Standard_MileStones</fullName>
        <columns>NAME</columns>
        <columns>IPM_Name__c</columns>
        <columns>IPM_Type_of_gate__c</columns>
        <columns>IPM_Type_of_Milestone__c</columns>
        <columns>IPM_Phase__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IPM_Project_Type__c</columns>
        <columns>IPM_Market_Type__c</columns>
        <columns>IPM_No_of_Days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IPM_Milestone__c.IPM_Milestones</value>
        </filters>
        <filters>
            <field>IPM_Type_of_Milestone__c</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filters>
        <label>Standard MileStones</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IPM Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Milestones</pluralLabel>
    <recordTypes>
        <fullName>IPM_Milestones</fullName>
        <active>true</active>
        <description>This is the list of standard Milestones  where IPM Central Team will manage</description>
        <label>IPM Milestones</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Project_Milestones</fullName>
        <active>true</active>
        <description>This is the list of Milestones assigned to project</description>
        <label>IPM Project Milestones</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Snapshot</fullName>
        <active>true</active>
        <label>IPM_Snapshot</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Due_Date_for_optional_A_adhoc_MS</fullName>
        <active>false</active>
        <description>Check those sub milestone&apos;s due date should not exceed more than it&apos;s parent&apos;s</description>
        <errorConditionFormula>IF( IPM_Milestone__c != &apos;&apos; &amp;&amp; IPM_Milestone__r.IPM_Due_Date__c &lt; IPM_Due_Date__c, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Due date of the milestone should not exceed its Gate&apos;s Due Date.</errorMessage>
    </validationRules>
</CustomObject>